--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "natural": "^7.0.6",
     "node-mic-record": "^0.0.1",
     "node-record-lpcm16": "^1.0.1",
+    "openai": "^4.49.1",
     "play-sound": "^1.1.6",
     "socket.io": "^4.7.5",
     "stream": "^0.0.2",
