需要修正界面

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ src/webrecord/public/wav/.keep
 src/webrecord/package-lock.json
 src/package-lock.json
 src/package-lock.json
+src/webrecord/crt/local.crt
+src/webrecord/crt/local.key
+vue/fsr/.npmrc
