--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ src/package-lock.json
 src/webrecord/crt/local.crt
 src/webrecord/crt/local.key
 vue/fsr/.npmrc
+src/webrecord/util/config.js
+src/webrecord/util/config.js
