record class化 vant import

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,12 @@ doc/pwd.md
 *.wav
 */*.wav
 src/web/public/face/model
-src/package-lock.json
-src/package-lock.json
 src/webrecord/public/wav/.keep
 src/webrecord/package-lock.json
-src/package-lock.json
 src/package-lock.json
 src/webrecord/crt/local.crt
 src/webrecord/crt/local.key
 vue/fsr/.npmrc
 src/webrecord/util/config.js
-src/webrecord/util/config.js
-src/webrecord/util/config.js
+src/recorder-master
+
