--- a/src/webrecord/package.json
+++ b/src/webrecord/package.json
@@ -25,6 +25,7 @@
     "socket.io-client": "^2.2.0",
     "stream": "^0.0.2",
     "string-similarity": "^4.0.4",
+    "vant": "^4.9.1",
     "wav-encoder": "^1.3.0"
   }
 }
