--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ src/webrecord/public/js
 src/webrecord/public/css
 src/webrecord/public/index.html
 src/webrecord/util/config.js
+src/webrecord/util/config.js
