--- a/src/package.json
+++ b/src/package.json
@@ -16,6 +16,7 @@
     "socket.io": "^4.7.5",
     "stream": "^0.0.2",
     "string-similarity": "^4.0.4",
+    "vue-socket.io": "^3.0.10",
     "wav-encoder": "^1.3.0"
   }
 }
