--- a/src/server/package.json
+++ b/src/server/package.json
@@ -9,6 +9,7 @@
     "@azure/ai-text-analytics": "^5.1.0",
     "@tensorflow/tfjs-node": "^4.20.0",
     "@vladmandic/face-api": "^1.7.13",
+    "cors": "^2.8.5",
     "cosine-similarity": "^1.0.1",
     "express": "^4.19.2",
     "face-api.js": "^0.22.2",
@@ -22,7 +23,7 @@
     "openai": "^4.49.1",
     "play-sound": "^1.1.6",
     "socket.io": "^4.7.5",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "^2.5.0",
     "stream": "^0.0.2",
     "string-similarity": "^4.0.4",
     "vant": "^4.9.1",
