--- a/src/server/package.json
+++ b/src/server/package.json
@@ -24,6 +24,7 @@
     "natural": "^7.0.6",
     "node-mic-record": "^0.0.1",
     "node-record-lpcm16": "^1.0.1",
+    "nodemailer": "^6.9.13",
     "openai": "^4.49.1",
     "play-sound": "^1.1.6",
     "socket.io": "^4.7.5",
