--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai",
+  "name": "fsr",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,12 @@
   "dependencies": {
     "@vant/touch-emulator": "^1.4.0",
     "core-js": "^3.8.3",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "socket.io-client": "^4.7.5",
     "vant": "^4.9.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-advanced-chat": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -34,7 +38,20 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off",
+       "no-unused-vars": "off",
+       "no-empty": "off",
+       "no-cond-assign": "off",
+       "no-useless-escape": "off",
+      "no-redeclare": "off",
+       "no-constant-condition": "off",
+       "no-setter-return": "off",
+       "no-fallthrough": "off",
+       "no-self-assign": "off",
+       "no-inner-declarations": "off",
+       "no-undef": "off"
+    }
   },
   "browserslist": [
     "> 1%",
