--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
     "@azure/ai-text-analytics": "^5.1.0",
     "@tensorflow/tfjs-node": "^4.20.0",
     "@vladmandic/face-api": "^1.7.13",
+    "axios": "^1.7.2",
     "cosine-similarity": "^1.0.1",
     "express": "^4.19.2",
     "face-api.js": "^0.22.2",
