--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "@vladmandic/face-api": "^1.7.13",
     "axios": "^1.7.2",
     "cosine-similarity": "^1.0.1",
+    "element-plus": "^2.7.5",
     "express": "^4.19.2",
     "face-api.js": "^0.22.2",
     "js-levenshtein": "^1.1.6",
