--- a/src/client/package.json
+++ b/src/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
     "socket.io-client": "^4.7.5",
     "vant": "^4.9.1",
