--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ src/server/test.js
 src/server/test.js
 doc/time.xlsx
 doc/~$time.xlsx
+bak/client_vac/src/js/vue-advanced-chat.es.js
+bak/client_vac/src/js/vue-advanced-chat.umd.js
