--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ doc/time.xlsx
 doc/~$time.xlsx
 bak/client_vac/src/js/vue-advanced-chat.es.js
 bak/client_vac/src/js/vue-advanced-chat.umd.js
+doc/wangto.md
