--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,7 @@
     "face-api.js": "^0.22.2",
     "js-levenshtein": "^1.1.6",
     "microsoft-cognitiveservices-speech-sdk": "^1.36.0",
+    "multer": "1.4.5-lts.1",
     "natural": "^7.0.6",
     "node-mic-record": "^0.0.1",
     "node-record-lpcm16": "^1.0.1",
