--- a/src/client/package.json
+++ b/src/client/package.json
@@ -40,13 +40,7 @@
       "vue/no-unused-components": "off",
       "vue/no-unused-vars": "off",
       "vue/no-multiple-template-root": "off",
-      "no-unused-vars": [
-        "error",
-        {
-          "vars": "all",
-          "args": "all"
-        }
-      ]
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
