[core]下载相关 无解

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ doc/~$time.xlsx
 bak/client_vac/src/js/vue-advanced-chat.es.js
 bak/client_vac/src/js/vue-advanced-chat.umd.js
 doc/wangto.md
+doc/wecomid.csv
