--- a/src/server/package.json
+++ b/src/server/package.json
@@ -25,7 +25,9 @@
     "node-record-lpcm16": "^1.0.1",
     "nodemailer": "^6.9.13",
     "openai": "^4.49.1",
+    "pinyin": "3.0.0-alpha.4",
     "play-sound": "^1.1.6",
+    "romaji": "^0.2.21",
     "socket.io": "^4.7.5",
     "socket.io-client": "^2.5.0",
     "stream": "^0.0.2",
