--- a/src/server/package.json
+++ b/src/server/package.json
@@ -33,6 +33,7 @@
     "stream": "^0.0.2",
     "string-similarity": "^4.0.4",
     "vant": "^4.9.1",
-    "wav-encoder": "^1.3.0"
+    "wav-encoder": "^1.3.0",
+    "xlsx": "^0.18.5"
   }
 }
